@@ -51,6 +51,7 @@ export(os.shutdown)
 export(os.sleep)
 export(R_version_in_a_folder)
 export(require2)
+export(restart_RGui)
 export(source.https)
 export(system.PATH)
 export(updateR)
