@@ -20,10 +20,13 @@ To install the stable version on CRAN:
 install.packages('installr')
 ```
 
-To install the GitHub version:
+To install the latest installr version from GitHub use:
 
 ```r
 if (!require('devtools')) install.packages('devtools'); require('devtools')
+# make sure you have Rtools installed first! if not, then run:
+#install.packages('installr')
+#install_Rtools()
 install_github('installr', 'talgalili')
 ```
 
